# haskell-trie

./: Trie.hs  haskell-trie.cabal
app/: Main.hs
src/: Trie.hs
