cabal-version:      2.4
name:               haskell-trie
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             angauber
maintainer:         44972764+angauber@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
    exposed-modules:  Trie

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>= 4.16.4.0,
        hashable ^>= 1.4.3.0

    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell-trie
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>= 4.16.4.0,
        haskell-trie

    hs-source-dirs:   app
    default-language: Haskell2010
